# opengl-playground

./: CMakeLists.txt  README.md
exercises/: 1-triangles.cpp
include/: glimports.h
lib/: LoadShaders.cpp  glfw3.lib
media/shaders/triangles/: triangles.vert
opengl-tutorial/: CMakeLists.txt  opengl-tutorial.cpp  opengl-tutorial.h
